@@ -45,6 +45,8 @@ library
         QuickCheck,
         aeson,
         base > 4 && < 5,
+        blaze-html,
+        blaze-markup,
         binary,
         bytestring >= 0.10.2.0,
         cmdargs,
